--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,10 +11,8 @@ spring:
 api:
   url: "https://api.hgbrasil.com/finance?format=json-cors&"
   key: ${API_KEY}
-
-app:
-  frontend:
-    url: http://localhost:3000
+  coincap-url: "https://api.coincap.io/v2/assets?limit=10"
+  binance-url: "https://api.binance.com/api/v3/ticker/price"
 
 management:
   endpoint:
