--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,16 +2,23 @@ spring:
   datasource:
     url: ${DATABASE_URL}
     driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 7
+      minimum-idle: 1
+      connection-timeout: 30000
+      max-lifetime: 1800000
 
   jpa:
     hibernate:
       ddl-auto: update
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+    show-sql: false
+    properties:
+      hibernate:
+        format_sql: true
 
 api:
   url: "https://api.hgbrasil.com/finance?format=json-cors&"
   key: ${API_KEY}
-
-app:
-  frontend:
-    url: ${FRONTEND_URL}
+  coincap-url: "https://api.coincap.io/v2/assets?limit=10"
+  binance-url: "https://api.binance.com/api/v3/ticker/price"
