--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -20,5 +20,7 @@ spring:
 api:
   url: "https://api.hgbrasil.com/finance?format=json-cors&"
   key: ${API_KEY}
-  coincap-url: "https://api.coincap.io/v2/assets?limit=10"
-  binance-url: "https://api.binance.com/api/v3/ticker/price"
+  cmc-url: "https://pro-api.coinmarketcap.com/v1/cryptocurrency/quotes/latest"
+  cmc-key: ${API_CMC_KEY}
+  # Fallback
+  coingecko-url: "https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=market_cap_desc&per_page=10&page=1&sparkline=false"
