--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -24,3 +24,6 @@ api:
   cmc-key: ${API_CMC_KEY}
   # Fallback
   coingecko-url: "https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=market_cap_desc&per_page=10&page=1&sparkline=false"
+  gov-url: "https://api.bcb.gov.br/dados/serie/bcdata.sgs.{codigo}/dados/ultimos/1?formato=json"
+  brapi-url: "https://brapi.dev/api/quote/{tickers}?token={token}"
+  brapi-token: ${API_BRAPI_KEY}
