--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,8 +31,13 @@ logging:
     com.gestao.financeira: WARN
 
 app:
+  frontend-url: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
   cors:
     allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
 
   email:
     from: ${MAIL_FROM:no-reply@seu-dominio.com}
+
+jwt:
+  secret: ${JWT_SECRET}
+  expiration: 3600000
