--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,18 +3,9 @@ spring:
     active: ${SPRING_PROFILES_ACTIVE:dev}
 
 
-  mail:
-    host: smtp.gmail.com
-    port: 587
-    username: ${GMAIL_USER}
-    password: ${GMAIL_APP_PASS}
-    properties:
-      mail:
-        smtp:
-          auth: true
-          starttls:
-            enable: true
-            required: true
+brevo:
+  api:
+    key: ${BREVO_API_KEY}
 
 management:
   endpoints:
@@ -36,7 +27,9 @@ app:
     allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
 
   email:
-    from: "FinanceX <${GMAIL_USER}>"
+    from:
+      name: FinanceX
+      address: ${BREVO_EMAIL_FROM}
 
 jwt:
   secret: ${JWT_SECRET}
