--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.sendinblue</groupId>
-            <artifactId>sib-api-v3-sdk</artifactId>
-            <version>7.0.0</version>
+            <groupId>com.resend</groupId>
+            <artifactId>resend-java</artifactId>
+            <version>2.2.0</version>
         </dependency>
 
         <dependency>
