--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     active: ${SPRING_PROFILES_ACTIVE:dev}
 
 
-brevo:
+resend:
   api:
-    key: ${BREVO_API_KEY}
+    key: ${RESEND_API_KEY}
 
 management:
   endpoints:
@@ -25,11 +25,6 @@ app:
   frontend-url: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
   cors:
     allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
-
-  email:
-    from:
-      name: FinanceX
-      address: ${BREVO_EMAIL_FROM}
 
 jwt:
   secret: ${JWT_SECRET}
