--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,8 @@ app:
 jwt:
   secret: ${JWT_SECRET}
   expiration: 3600000
+
+ai:
+  gemini:
+    url: "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key="
+    key: ${GEMINI_API_KEY}
