--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,5 +31,5 @@ jwt:
 
 ai:
   gemini:
-    url: "https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key="
+    url: "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key="
     key: ${GEMINI_API_KEY}
