--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,6 +24,8 @@ app:
   frontend-url: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
   cors:
     allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
+  social:
+    google-client-id: ${GOOGLE_CLIENT_ID}
 
 jwt:
   secret: ${JWT_SECRET}
