--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,7 @@ app:
     allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
   social:
     google-client-id: ${GOOGLE_CLIENT_ID}
+    microsoft-client-id: ${MICROSOFT_CLIENT_ID}
 
 jwt:
   secret: ${JWT_SECRET}
